@@ -1,0 +1,1 @@
+This directory is for examples of how you might actually use rspec_on_rails.
