@@ -1,0 +1,1 @@
+This directory holds the specs for rspec_on_rails.
